drkns 05.03.2018 08:01:15 +0000 - build 5162

1. Поправлена сборка в VS2015.

drkns 04.03.2018 22:56:16 +0000 - build 5161

1. Static analysis warnings.

2. Рефакторинг.

drkns 03.03.2018 17:24:57 +0000 - build 5160

1. Не смешиваем узкие и широкие символы в вызовах fmt.

zg 03.03.2018 17:11:47 +0200 - build 5159

1. уточнение 5049: PointToName падала при передачи нулевого указателя.

drkns 02.03.2018 13:57:21 +0000 - build 5158

1. Уточнение 5155.

drkns 02.03.2018 09:54:21 +0000 - build 5157

1. Уточнение 5155.

drkns 02.03.2018 09:28:54 +0000 - build 5156

1. Уточнение 5155.

drkns 01.03.2018 21:45:36 +0000 - build 5155

1. Рефакторинг.

MZK 28.02.2018 22:26:27 -0800

1. Перевёл и поредактировал страницу @Viewer справки (английскую и русскую).

drkns 01.03.2018 00:25:44 +0000 - build 5154

1. Продолжение 5150.3.

2. Рефакторинг.

zg 28.02.2018 14:24:01 +0200 - build 5153

1. ECTL_SETSTRING при пустой строке не устанавливал eol.

zg 27.02.2018 13:51:24 +0200 - build 5152

1. уточнение 5150.2.

drkns 26.02.2018 00:18:23 +0000 - build 5151

1. fmt v5.

drkns 25.02.2018 23:42:42 +0000 - build 5150

1. Настройки сортировки (numeric & case-sensitive) вынесены в System Settings.
   Там же теперь можно выбрать базовое сравнение (linguistic / invariant / ordinal).
   Настройки сортировки применяются глобально ко всему.

2. Для плагинов доступна функция FSF.CompareStrings, позволяющая сортировать так же, как сортирует Far (как именно - не оговорено и зависит от настроек).
   FSF.LStricmp и FSF.LStrnicmp - deprecated и не рекомендуются к использованию.

3. FCTL_SETNUMERICSORT, FCTL_SETCASESENSITIVESORT, PFLAGS_NUMERICSORT, PFLAGS_CASESENSITIVESORT больше нет.

MZK 22.02.2018 23:18:21 -0800

1. Отредактировал страницу @CopyFiles справки (английскую и русскую).

2. Мелкие добавления и уточнения справки, перевод на английский.

MZK 21.02.2018 22:37:57 -0800 - build 5149
