@@ -1,3 +1,7 @@
+drkns 05.03.2018 19:15:49 +0000 - build 5163
+
+1. Уточнение 5161.
+
 drkns 05.03.2018 08:01:15 +0000 - build 5162
 
 1. Поправлена сборка в VS2015.
